api: update openapi schema to remove unnecessary requirement of organizationId in payload
